--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=33
+pkgrel=34
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -302,6 +302,7 @@ package_couldinho-desktop() {
     install -Dm 0644 desktop/etc/systemd/user/waybar-updates.service "$pkgdir/etc/systemd/user/waybar-updates.service"
     install -Dm 0644 desktop/etc/systemd/user/waybar-updates.timer "$pkgdir/etc/systemd/user/waybar-updates.timer"
     install -Dm 0644 desktop/etc/systemd/user/waybar.service "$pkgdir/etc/systemd/user/waybar.service"
+    install -Dm 0644 desktop/etc/systemd/user/wl-clipboard-manager.service "$pkgdir/etc/systemd/user/wl-clipboard-manager.service"
 
     # Multimedia
     depends+=(
