--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=35
+pkgrel=36
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -179,6 +179,7 @@ package_couldinho-base() {
     depends+=(
         pass                # Text-based password manager
         pass-git-helper     # Credential helper using pass to store details
+        pwgen               # Password generator
         usbguard            # USB security configuration
         yubikey-manager     # Yubikey settings
         yubico-pam          # PAM settings for yubikey
@@ -278,6 +279,8 @@ package_couldinho-desktop() {
     install -Dm 0755 desktop/usr/local/bin/sway-inactive-window-transparency "$pkgdir/usr/local/bin/sway-inactive-window-transparency"
     install -Dm 0755 desktop/usr/local/bin/sway-screenshare "$pkgdir/usr/local/bin/sway-screenshare"
     install -Dm 0755 desktop/usr/local/bin/sway-screenshot-area "$pkgdir/usr/local/bin/sway-screenshot-area"
+    install -Dm 0755 desktop/usr/local/bin/wl-clipboard-manager "$pkgdir/usr/local/bin/wl-clipboard-manager"
+    install -Dm 0644 desktop/etc/systemd/user/wl-clipboard-manager.service "$pkgdir/etc/systemd/user/wl-clipboard-manager.service"
 
     # Further sway packages
     depends+=(
@@ -304,7 +307,6 @@ package_couldinho-desktop() {
     install -Dm 0644 desktop/etc/systemd/user/waybar-updates.service "$pkgdir/etc/systemd/user/waybar-updates.service"
     install -Dm 0644 desktop/etc/systemd/user/waybar-updates.timer "$pkgdir/etc/systemd/user/waybar-updates.timer"
     install -Dm 0644 desktop/etc/systemd/user/waybar.service "$pkgdir/etc/systemd/user/waybar.service"
-    install -Dm 0644 desktop/etc/systemd/user/wl-clipboard-manager.service "$pkgdir/etc/systemd/user/wl-clipboard-manager.service"
 
     # Multimedia
     depends+=(
