Add fzf to fix sway popup apps

--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=36
+pkgrel=37
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -153,6 +153,7 @@ package_couldinho-base() {
         lscolors-git        # Colours for ls
         dfrs                # Colourised version of df
         tmux                # Terminal multiplexer
+        fzf                 # Command line fuzzy finder
     )
 
     install -Dm 0644 base/etc/zsh/zshrc "$pkgdir/etc/zsh/couldinho-zshrc"
