--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=39
+pkgrel=40
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -247,6 +247,7 @@ package_couldinho-desktop() {
         swaync                  # Sway notification daemon
         libnotify               # Desktop notification library
         wldash                  # Wayland launcher and dashboard
+        wf-recorder             # Wayland screen recorder
     )
 
     install -Dm 0644 desktop/etc/sway/config "$pkgdir/etc/sway/couldinho-desktop-config"
@@ -263,7 +264,6 @@ package_couldinho-desktop() {
     install -Dm 0755 desktop/usr/local/bin/pass-gen "$pkgdir/usr/local/bin/pass-gen"
     install -Dm 0755 desktop/usr/local/bin/waybar-decrypted "$pkgdir/usr/local/bin/waybar-decrypted"
     install -Dm 0755 desktop/usr/local/bin/waybar-dnd "$pkgdir/usr/local/bin/waybar-dnd"
-    install -Dm 0755 desktop/usr/local/bin/waybar-eyes "$pkgdir/usr/local/bin/waybar-eyes"
     install -Dm 0755 desktop/usr/local/bin/waybar-mail "$pkgdir/usr/local/bin/waybar-mail"
     install -Dm 0755 desktop/usr/local/bin/waybar-movie "$pkgdir/usr/local/bin/waybar-movie"
     install -Dm 0755 desktop/usr/local/bin/waybar-progress "$pkgdir/usr/local/bin/waybar-progress"
