--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=42
+pkgrel=43
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -332,13 +332,10 @@ package_couldinho-desktop() {
         slurp                   # Region selector tool
         grim                    # Screenshot utility
         swappy                  # Snapshot editing tool for wayland
-        #flameshot               # Screenshot tool
-        #copyq                   # Copy/Paste utility
-        #unclutter               # Hide mouse in i3 when not in use
-        #ranger                  # File manager from terminal (vim keybindings)
         python-pillow           # Used to view pictures within ranger
         freerdp                 # Remote desktop client
-        #xsecurelock             # Desktop lock screen
+        udiskie                 # Disk mounting tool
+        udiskie-dmenu-git       # dmenu for udiskie
     )
 
     install -Dm 0644 desktop/etc/xdg/kitty/diff.conf "$pkgdir/etc/xdg/kitty/diff.conf"
