--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=43
+pkgrel=44
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -342,6 +342,7 @@ package_couldinho-desktop() {
     install -Dm 0644 desktop/etc/xdg/kitty/kitty.conf "$pkgdir/etc/xdg/kitty/kitty.conf"
     install -Dm 0644 desktop/etc/xdg/kitty/vm.py "$pkgdir/etc/xdg/kitty/vm.py"
     install -Dm 0644 desktop/etc/xdg/swappy/config "$pkgdir/etc/xdg/swappy/config"
+    install -Dm 0644 desktop/etc/systemd/user/udiskie.service "$pkgdir/etc/systemd/user/udiskie.service"
 
     # Networking
     #depends+=(
