--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=45
+pkgrel=46
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -138,8 +138,8 @@ package_couldinho-base() {
         wget openssh                # Download and connect
         openvpn                     # Connect to PIA
         networkmanager-openvpn      # NetworkManager drivers for OpenVPN
-        gnu-netcat                  # GNU netcat - contains -e for executables
-        #openbsd-netcat             # OpenBSD netcat #TODO: Find a way to install both
+        #gnu-netcat                  # GNU netcat - contains -e for executables
+        openbsd-netcat             # OpenBSD netcat #TODO: Find a way to install both
         socat                       # Similar to netcat
         bandwhich                   # Terminal bandwith utilization tool
         croc                        # Send files securely to another computer
