--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=48
+pkgrel=49
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -320,8 +320,10 @@ package_couldinho-desktop() {
         alsa-utils              # Sound support
         pulseaudio              # Sound server
         pulseaudio-alsa         # ALSA config for pulseaudio
+        pavucontrol             # PulseAudio volume control/
         pamixer                 # Command line mixer
         vimiv                   # Image viewer with vim bindings
+        imagemagick             # Image viewing/manipulation program
     )
 
     # Documents
