--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=50
+pkgrel=51
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -211,6 +211,13 @@ package_couldinho-base() {
 
     install -Dm 0644 base/etc/systemd/system/reflector.service "$pkgdir/etc/systemd/system/reflector.service"
     install -Dm 0644 base/etc/systemd/system/reflector.timer "$pkgdir/etc/systemd/system/reflector.timer"
+
+    # Environment
+    install -Dm 0644 base/etc/environment.d/10-locale.conf "$pkgdir/etc/environment.d/10-locale.conf"
+    install -Dm 0644 base/etc/environment.d/30-path.conf "$pkgdir/etc/environment.d/30-path.conf"
+    install -Dm 0644 base/etc/environment.d/40-clean-home.conf "$pkgdir/etc/environment.d/40-clean-home.conf"
+    install -Dm 0644 base/etc/environment.d/50-progs.conf "$pkgdir/etc/environment.d/50-progs.conf"
+    install -Dm 0644 base/etc/environment.d/90-pass.conf "$pkgdir/etc/environment.d/90-pass.conf"
 }
 
 package_couldinho-desktop() {
@@ -365,6 +372,10 @@ package_couldinho-desktop() {
     install -Dm 0755 desktop/usr/local/bin/sway-screenshare "$pkgdir/usr/local/bin/sway-screenshare"
     install -Dm 0755 desktop/usr/local/bin/sway-screenshot-area "$pkgdir/usr/local/bin/sway-screenshot-area"
     install -Dm 0755 desktop/usr/local/bin/wl-clipboard-manager "$pkgdir/usr/local/bin/wl-clipboard-manager"
+
+    # Environment
+    install -Dm 0644 base/etc/environment.d/20-xdg.conf "$pkgdir/etc/environment.d/20-xdg.conf"
+    install -Dm 0644 base/etc/environment.d/60-wayland.conf "$pkgdir/etc/environment.d/60-wayland.conf"
 }
 
 package_couldinho-dev() {
@@ -503,6 +514,6 @@ package_couldinho-vmware() {
         gtkmm3                  # C++ bindings for GTK+ 3 - used for VMWare copy/paste
     )
 
-    install -Dm 0644 vmware/etc/zsh/zprofile "$pkgdir/etc/zsh/couldinho-vmware-zprofile"
-
+    # Environment
+    install -Dm 0644 base/etc/environment.d/70-vmware.conf "$pkgdir/etc/environment.d/70-vmware.conf"
 }
