--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=51
+pkgrel=52
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -374,8 +374,8 @@ package_couldinho-desktop() {
     install -Dm 0755 desktop/usr/local/bin/wl-clipboard-manager "$pkgdir/usr/local/bin/wl-clipboard-manager"
 
     # Environment
-    install -Dm 0644 base/etc/environment.d/20-xdg.conf "$pkgdir/etc/environment.d/20-xdg.conf"
-    install -Dm 0644 base/etc/environment.d/60-wayland.conf "$pkgdir/etc/environment.d/60-wayland.conf"
+    install -Dm 0644 desktop/etc/environment.d/20-xdg.conf "$pkgdir/etc/environment.d/20-xdg.conf"
+    install -Dm 0644 desktop/etc/environment.d/60-wayland.conf "$pkgdir/etc/environment.d/60-wayland.conf"
 }
 
 package_couldinho-dev() {
@@ -515,5 +515,5 @@ package_couldinho-vmware() {
     )
 
     # Environment
-    install -Dm 0644 base/etc/environment.d/70-vmware.conf "$pkgdir/etc/environment.d/70-vmware.conf"
+    install -Dm 0644 vmware/etc/environment.d/70-vmware.conf "$pkgdir/etc/environment.d/70-vmware.conf"
 }
