--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=53
+pkgrel=54
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -262,6 +262,7 @@ package_couldinho-desktop() {
     install -Dm 0644 desktop/etc/swaylock/config "$pkgdir/etc/swaylock/config"
     install -Dm 0644 desktop/etc/X11/xorg.conf.d/00-keyboard.conf "$pkgdir/etc/X11/xorg.conf.d/00-keyboard.conf"
     install -Dm 0644 desktop/usr/share/X11/xkb/symbols/jc "$pkgdir/usr/share/X11/xkb/symbols/jc"
+    install -Dm 0644 desktop/etc/xkb/symbols/jc-hyper "$pkgdir/etc/xkb/symbols/jc-hyper"
     install -Dm 0644 desktop/etc/xdg/waybar/config "$pkgdir/etc/xdg/waybar/couldinho-desktop-config"
     install -Dm 0644 desktop/etc/xdg/waybar/style.css "$pkgdir/etc/xdg/waybar/couldinho-desktop-style.css"
     install -Dm 0644 desktop/etc/xdg/swaync/config.json "$pkgdir/etc/xdg/swaync/couldinho-desktop-config.json"
