--- a/conf/desktop/etc/sway/config
+++ b/conf/desktop/etc/sway/config
@@ -3,7 +3,7 @@
 font pango:Taskbar, Inconsolata 10
 
 input type:keyboard {
-    xkb_layout jc-hyper,jc
+    xkb_layout us-hyper
     xkb_numlock on
     xkb_options caps:hyper
 }
