--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=58
+pkgrel=59
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -319,6 +319,7 @@ package_couldinho-desktop() {
         freerdp                 # Remote desktop client
         udiskie                 # Disk mounting tool
         udiskie-dmenu-git       # dmenu for udiskie
+        gcr                     # Crypto UI library
     )
 
     install -Dm 0644 desktop/etc/xdg/kitty/diff.conf "$pkgdir/etc/xdg/kitty/diff.conf"
