--- a/conf/desktop/etc/sway/config
+++ b/conf/desktop/etc/sway/config
@@ -51,6 +51,7 @@ set $workspace0 workspace number 10
 for_window    [app_id=".*"]                              sticky enable
 for_window    [window_role="pop-up"]                     floating enable
 for_window    [app_id="udiskie"]                         floating enable
+for_window    [app_id="pavucontrol"]                     floating enable
 for_window    [class="Vivaldi-stable"]                   move container to $workspace2
 for_window    [app_id="scli"]                            move container to $workspace3
 for_window    [app_id="Signal"]                          move container to $workspace3
