--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=60
+pkgrel=61
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -125,9 +125,11 @@ package_couldinho-base() {
         ripgrep-all         # ripgrep wrapper for multiple file types
         rmtrash             # Delete to bin
         bat                 # Cat replacement with syntax highlighting
+        htop                # Improved top - process viewer
     )
 
     install -dm 0755 base/etc/bat "$pkgdir/etc/bat"
+    install -Dm 0644 base/etc/htoprc "$pkgdir/etc/htoprc"
 
     # Networking + VPN
     depends+=(
@@ -345,32 +347,33 @@ package_couldinho-desktop() {
     )
 
     # General scripts
-    install -Dm 0755 desktop/usr/local/bin/cglaunch "$pkgdir/usr/local/bin/cglaunch"
-    install -Dm 0755 desktop/usr/local/bin/checkofficial "$pkgdir/usr/local/bin/checkofficial"
-    install -Dm 0755 desktop/usr/local/bin/dmenu "$pkgdir/usr/local/bin/dmenu"
-    install -Dm 0755 desktop/usr/local/bin/emoji-bootstrap "$pkgdir/usr/local/bin/emoji-bootstrap"
-    install -Dm 0755 desktop/usr/local/bin/emoji-dmenu "$pkgdir/usr/local/bin/emoji-dmenu"
-    install -Dm 0755 desktop/usr/local/bin/pass-gen "$pkgdir/usr/local/bin/pass-gen"
-    install -Dm 0755 desktop/usr/local/bin/waybar-decrypted "$pkgdir/usr/local/bin/waybar-decrypted"
-    install -Dm 0755 desktop/usr/local/bin/waybar-dnd "$pkgdir/usr/local/bin/waybar-dnd"
-    install -Dm 0755 desktop/usr/local/bin/waybar-mail "$pkgdir/usr/local/bin/waybar-mail"
-    install -Dm 0755 desktop/usr/local/bin/waybar-movie "$pkgdir/usr/local/bin/waybar-movie"
-    install -Dm 0755 desktop/usr/local/bin/waybar-progress "$pkgdir/usr/local/bin/waybar-progress"
-    install -Dm 0755 desktop/usr/local/bin/waybar-recording "$pkgdir/usr/local/bin/waybar-recording"
-    install -Dm 0755 desktop/usr/local/bin/waybar-security "$pkgdir/usr/local/bin/waybar-security"
-    install -Dm 0755 desktop/usr/local/bin/waybar-systemd "$pkgdir/usr/local/bin/waybar-systemd"
-    install -Dm 0755 desktop/usr/local/bin/waybar-updates "$pkgdir/usr/local/bin/waybar-updates"
-    install -Dm 0755 desktop/usr/local/bin/waybar-usbguard "$pkgdir/usr/local/bin/waybar-usbguard"
-    install -Dm 0755 desktop/usr/local/bin/waybar-vpn "$pkgdir/usr/local/bin/waybar-vpn"
-    install -Dm 0755 desktop/usr/local/bin/waybar-yubikey "$pkgdir/usr/local/bin/waybar-yubikey"
-    install -Dm 0755 desktop/usr/local/bin/sway-audio "$pkgdir/usr/local/bin/sway-audio"
-    install -Dm 0755 desktop/usr/local/bin/sway-autoname-workspaces "$pkgdir/usr/local/bin/sway-autoname-workspaces"
-    install -Dm 0755 desktop/usr/local/bin/sway-exit "$pkgdir/usr/local/bin/sway-exit"
-    install -Dm 0755 desktop/usr/local/bin/sway-gif-area "$pkgdir/usr/local/bin/sway-gif-area"
-    install -Dm 0755 desktop/usr/local/bin/sway-inactive-window-transparency "$pkgdir/usr/local/bin/sway-inactive-window-transparency"
-    install -Dm 0755 desktop/usr/local/bin/sway-screenshare "$pkgdir/usr/local/bin/sway-screenshare"
-    install -Dm 0755 desktop/usr/local/bin/sway-screenshot-area "$pkgdir/usr/local/bin/sway-screenshot-area"
-    install -Dm 0755 desktop/usr/local/bin/wl-clipboard-manager "$pkgdir/usr/local/bin/wl-clipboard-manager"
+    install -dm 0755 desktop/usr/local/bin "$pkgdir/usr/local/bin"
+    #install -Dm 0755 desktop/usr/local/bin/cglaunch "$pkgdir/usr/local/bin/cglaunch"
+    #install -Dm 0755 desktop/usr/local/bin/checkofficial "$pkgdir/usr/local/bin/checkofficial"
+    #install -Dm 0755 desktop/usr/local/bin/dmenu "$pkgdir/usr/local/bin/dmenu"
+    #install -Dm 0755 desktop/usr/local/bin/emoji-bootstrap "$pkgdir/usr/local/bin/emoji-bootstrap"
+    #install -Dm 0755 desktop/usr/local/bin/emoji-dmenu "$pkgdir/usr/local/bin/emoji-dmenu"
+    #install -Dm 0755 desktop/usr/local/bin/pass-gen "$pkgdir/usr/local/bin/pass-gen"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-decrypted "$pkgdir/usr/local/bin/waybar-decrypted"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-dnd "$pkgdir/usr/local/bin/waybar-dnd"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-mail "$pkgdir/usr/local/bin/waybar-mail"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-movie "$pkgdir/usr/local/bin/waybar-movie"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-progress "$pkgdir/usr/local/bin/waybar-progress"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-recording "$pkgdir/usr/local/bin/waybar-recording"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-security "$pkgdir/usr/local/bin/waybar-security"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-systemd "$pkgdir/usr/local/bin/waybar-systemd"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-updates "$pkgdir/usr/local/bin/waybar-updates"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-usbguard "$pkgdir/usr/local/bin/waybar-usbguard"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-vpn "$pkgdir/usr/local/bin/waybar-vpn"
+    #install -Dm 0755 desktop/usr/local/bin/waybar-yubikey "$pkgdir/usr/local/bin/waybar-yubikey"
+    #install -Dm 0755 desktop/usr/local/bin/sway-audio "$pkgdir/usr/local/bin/sway-audio"
+    #install -Dm 0755 desktop/usr/local/bin/sway-autoname-workspaces "$pkgdir/usr/local/bin/sway-autoname-workspaces"
+    #install -Dm 0755 desktop/usr/local/bin/sway-exit "$pkgdir/usr/local/bin/sway-exit"
+    #install -Dm 0755 desktop/usr/local/bin/sway-gif-area "$pkgdir/usr/local/bin/sway-gif-area"
+    #install -Dm 0755 desktop/usr/local/bin/sway-inactive-window-transparency "$pkgdir/usr/local/bin/sway-inactive-window-transparency"
+    #install -Dm 0755 desktop/usr/local/bin/sway-screenshare "$pkgdir/usr/local/bin/sway-screenshare"
+    #install -Dm 0755 desktop/usr/local/bin/sway-screenshot-area "$pkgdir/usr/local/bin/sway-screenshot-area"
+    #install -Dm 0755 desktop/usr/local/bin/wl-clipboard-manager "$pkgdir/usr/local/bin/wl-clipboard-manager"
 
     # Environment
     install -Dm 0644 desktop/etc/environment.d/20-xdg.conf "$pkgdir/etc/environment.d/20-xdg.conf"
