--- a/conf/base/etc/pacman.conf
+++ b/conf/base/etc/pacman.conf
@@ -34,7 +34,8 @@ Architecture = auto
 Color
 #TotalDownload
 CheckSpace
-#VerbosePkgLists
+VerbosePkgLists
+ParallelDownloads = 32
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
