--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=70
+pkgrel=71
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -344,6 +344,7 @@ package_couldinho-desktop() {
         udiskie                 # Disk mounting tool
         udiskie-dmenu-git       # dmenu for udiskie
         gcr                     # Crypto UI library
+        progress                # Shows progress for coreutils commands
     )
 
     install -Dm 0644 desktop/etc/xdg/kitty/diff.conf "$pkgdir/etc/xdg/kitty/diff.conf"
