--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=71
+pkgrel=72
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -286,6 +286,7 @@ package_couldinho-desktop() {
         qalculate-gtk               # Calculator
         ttf-inconsolata             # Font for terminal and status etc.
         otf-font-awesome            # Font with icons
+        ttf-joypixels               # Fonts with emojis
         python-tzlocal              # Used within the clock for the status bar
         gsimplecal                  # GTK calendar for the status bar
         inotify-tools               # Interface to inotify
