--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=73
+pkgrel=74
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -496,6 +496,9 @@ package_couldinho-sec() {
     depends+=(
         john                    # John the Ripper password cracker
     )
+
+    # Desktop mimetype apps
+    install -Dm 0644 sec/usr/local/share/applications/ida-free.desktop "$pkgdir/usr/local/share/applications/ida-free.desktop"
 }
 
 package_couldinho-laptop() {
