--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=74
+pkgrel=75
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -499,6 +499,8 @@ package_couldinho-sec() {
 
     # Desktop mimetype apps
     install -Dm 0644 sec/usr/local/share/applications/ida-free.desktop "$pkgdir/usr/local/share/applications/ida-free.desktop"
+    install -Dm 0644 sec/usr/local/share/applications/010editor.desktop "$pkgdir/usr/local/share/applications/010editor.desktop"
+    install -Dm 0644 sec/usr/local/share/applications/ghidra.desktop "$pkgdir/usr/local/share/applications/ghidra.desktop"
 }
 
 package_couldinho-laptop() {
