ghidra: remove version from name

--- a/conf/sec/usr/local/share/applications/ghidra.desktop
+++ b/conf/sec/usr/local/share/applications/ghidra.desktop
@@ -7,8 +7,7 @@ GenericName[en_US]=Ghidra Software Reverse Engineering Suite
 GenericName=Ghidra Software Reverse Engineering Suite
 Icon=/opt/ghidra/support/ghidra.ico
 MimeType=
-Name[en_US]=Ghidra 9.0
-Name=Ghidra 9.0
+Name=Ghidra
 Path=/opt/ghidra/
 StartupNotify=false
 Terminal=false
