--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=78
+pkgrel=79
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -515,6 +515,7 @@ package_couldinho-laptop() {
 
     # Laptop specific programs
     depends+=(
+        iwd                     # Internet wireless daemon
         light                   # Program to change backlight
         wlsunset                # Day/night gamma adjustments
         wluma                   # Automatic gamma adjustments based on screen content
