--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=2
-pkgrel=82
+pkgrel=83
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -518,11 +518,15 @@ package_couldinho-laptop() {
         light                   # Program to change backlight
         wlsunset                # Day/night gamma adjustments
         wluma                   # Automatic gamma adjustments based on screen content
+        bluez                   # Bluetooth daemons
+        bluez-utils             # Utils for bluez
+        pulseaudio-bluetooth    # Bluetooth module for pulseaudio
     )
 
     # Overwrite desktop files
-    install -Dm 0644 laptop/usr/share/X11/xorg.conf.d/40-libinput.conf \
-        "$pkgdir/usr/share/X11/xorg.conf.d/couldinho-laptop-40-libinput.conf"
+    install -Dm 0644 laptop/usr/share/X11/xorg.conf.d/40-libinput.conf "$pkgdir/usr/share/X11/xorg.conf.d/couldinho-laptop-40-libinput.conf"
+    install -Dm 0644 laptop/etc/pulse/system.pa.d/auto-connect.pa "$pkgdir/etc/pulse/system.pa.d/auto-connect.pa"
+    install -Dm 0644 laptop/etc/bluetooth/main.conf "$pkgdir/etc/bluetooth/couldinho-laptop-main.conf"
 }
 
 package_couldinho-vmware() {
