--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=3
-pkgrel=3
+pkgrel=4
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -528,7 +528,10 @@ package_couldinho-laptop() {
         bluez                   # Bluetooth daemons
         bluez-utils             # Utils for bluez
         pulseaudio-bluetooth    # Bluetooth module for pulseaudio
+        rofi-wifi-menu-git      # Rofi-based wifi-menu
     )
+
+    install -Dm 0644 laptop/etc/xdg/waybar/config.patch "$pkgdir/etc/xdg/waybar/config.patch"
 
     # Display
     #depends+=(
