--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=3
-pkgrel=4
+pkgrel=5
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -545,6 +545,7 @@ package_couldinho-laptop() {
     install -Dm 0644 laptop/etc/pulse/system.pa.d/auto-connect.pa "$pkgdir/etc/pulse/system.pa.d/auto-connect.pa"
     install -Dm 0644 laptop/etc/bluetooth/main.conf "$pkgdir/etc/bluetooth/couldinho-laptop-main.conf"
     install -Dm 0644 laptop/etc/sway/config.patch "$pkgdir/etc/sway/config.patch"
+    install -Dm 0755 laptop/usr/local/bin/rofi-bluetooth "$pkgdir/usr/local/bin/rofi-bluetooth"
 }
 
 package_couldinho-vmware() {
