--- a/conf/desktop/etc/rofi-pass.conf
+++ b/conf/desktop/etc/rofi-pass.conf
@@ -81,7 +81,7 @@ clip_clear=45
 edit_new_pass="true"
 
 # default_user is also used for password files that have no user field.
-#default_user="${ROFI_PASS_DEFAULT_USER-$(whoami)}"
+default_user="${ROFI_PASS_DEFAULT_USER"
 #default_user2=mary_ann
 #password_length=12
 
