--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=3
-pkgrel=29
+pkgrel=30
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -200,7 +200,7 @@ package_couldinho-base() {
         "$pkgdir/etc/usbguard/couldinho-usbguard-daemon.conf"
     install -Dm 0644 base/etc/default/earlyoom "$pkgdir/etc/default/couldinho-earlyoom"
     install -Dm 0644 base/etc/pam.d/polkit-1 "$pkgdir/etc/pam.d/couldinho-polkit-1"
-    install -Dm 0644 base/etc/pam.d/couldinho-sudo "$pkgdir/etc/pam.d/couldinho-sudo"
+    install -Dm 0644 base/etc/pam.d/sudo "$pkgdir/etc/pam.d/couldinho-sudo"
 
     # Packages
     depends+=(
