--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=3
-pkgrel=33
+pkgrel=34
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -510,8 +510,8 @@ package_couldinho-sec() {
         "$pkgdir/usr/local/bin/gdb-gef"
     install -Dm 0755 sec/usr/local/bin/gdb-pwndbg \
         "$pkgdir/usr/local/bin/gdb-gef"
-    install -Dm 0644 sec/etc/gdbinit \
-        "$pkgdir/etc/gdbinit"
+    install -Dm 0644 sec/etc/gdb/gdbinit \
+        "$pkgdir/etc/gdb/couldinho-sec-gdbinit"
 
     # Reversing
     depends+=(
