--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=3
-pkgrel=49
+pkgrel=50
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -116,6 +116,7 @@ package_couldinho-base() {
         "$pkgdir/etc/xdg/nvim/plugins.vim"
     install -dm 0775 "$pkgdir/etc/xdg/nvim/autoload"
     cp -r base/etc/xdg/nvim/modules "$pkgdir/etc/xdg/nvim/modules"
+    cp -r base/etc/xdg/nvim/config "$pkgdir/etc/xdg/nvim/config"
 
     # Base replacements
     depends+=(
