--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=3
-pkgrel=50
+pkgrel=51
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -223,6 +223,9 @@ package_couldinho-base() {
     install -Dm 0644 base/etc/environment.d/40-clean-home.conf "$pkgdir/etc/environment.d/40-clean-home.conf"
     install -Dm 0644 base/etc/environment.d/50-progs.conf "$pkgdir/etc/environment.d/50-progs.conf"
     install -Dm 0644 base/etc/environment.d/90-pass.conf "$pkgdir/etc/environment.d/90-pass.conf"
+
+    # Binaries
+    install -Dm 0755 desktop/usr/local/bin/vimdiff "$pkgdir/usr/local/bin/vimdiff"
 }
 
 package_couldinho-desktop() {
