--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=3
-pkgrel=60
+pkgrel=61
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -100,6 +100,7 @@ package_couldinho-base() {
         fwupd               # Firmware updater
         terminus-font       # Better font for console
         git                 # Move to devel?
+        git-delta           # Git diff
         cifs-utils          # Connect to shared drives
         stow                # Link dotfiles to home dir
         neovim              # Vim replacement
