--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=3
-pkgrel=62
+pkgrel=63
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -531,6 +531,11 @@ package_couldinho-sec() {
     # Cracking
     depends+=(
         john                    # John the Ripper password cracker
+    )
+
+    # Fuzzing
+    depends+=(
+        aflplusplus             # Fuzzer
     )
 
     # Desktop mimetype apps
