--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=3
-pkgrel=84
+pkgrel=85
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -252,7 +252,7 @@ package_couldinho-desktop() {
     depends+=(
         sway                    # Tiling wayland compositor replacing i3
         swayidle                # Idle management system for sway
-        swaylock                # Lock wayland screen
+        swaylock-effects        # Lock wayland screen with added effects
         wl-clipboard            # Wayland command-line clipboard manager
         python-i3ipc            # IPC for i3 via python
         waybar                  # Sway bar for wayland
