--- a/conf/desktop/etc/sway/config
+++ b/conf/desktop/etc/sway/config
@@ -309,15 +309,11 @@ bindsym --to-code {
 # Auto lock / sleep
 # Lock after 15 minutes, screens off after 20 minus
 # logind.conf handles suspend after 30 mins
-set $lock swaylock \
-    --clock --indicator --screenshots --effect-scale 0.4 \
-    --effect-vignette 0.2:0.5 --effect-blur 4x2 \
-    --datestr "%a %Y-%m-%d" --timestr "%k:%M"
 exec swayidle -w \
-    timeout 900 $lock \
+    timeout 900 swaylock \
     timeout 1200 'swaymsg "output * dpms off"' \
     resume 'swaymsg "output * dpms on"' \
-    before-sleep $lock
+    before-sleep swaylock
 
 include @sysconfdir@/sway/config.d/*
 exec "systemctl --user import-environment; systemctl --user start sway-session.target"
