Modify sway pointer config instead of mouse

--- a/conf/desktop/etc/sway/config
+++ b/conf/desktop/etc/sway/config
@@ -14,7 +14,7 @@ input type:touchpad {
     tap enabled
 }
 
-input type:mouse {
+input type:pointer {
     accel_profile "flat"
     pointer_accel "-0.5"
 }
