--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=3
-pkgrel=94
+pkgrel=95
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -9,7 +9,7 @@ license=(MIT)
 groups=(couldinho)
 
 source=(conf-files.tar.xz)
-sha256sums=(c48c1f45fb45407b4629de5e76a5ddb595673f86a09b85d9611cf3da823149d8)
+sha256sums=(14e11fd553033ed8758c75c0c5e5e56638d384dc884c482145414c64a7ade206)
 
 # Comment for update
 
@@ -248,27 +248,25 @@ package_couldinho-desktop() {
     install -Dm 0644 desktop/etc/X11/xorg.conf.d/00-keyboard.conf \
                     "$pkgdir/etc/X11/xorg.conf.d/00-keyboard.conf"
 
-    # sway
+    # hyprland
     depends+=(
-        sway                    # Tiling wayland compositor replacing i3
+        hyprland                # Tiling wayland compositor replacing i3/sway
+        waybar-hyprland         # Sway bar for wayland
+        hyprland-autoname-workspaces-git    # Auto-name hyprland workspaces
         swayidle                # Idle management system for sway
         swaylock-effects        # Lock wayland screen with added effects
         wl-clipboard            # Wayland command-line clipboard manager
         python-i3ipc            # IPC for i3 via python
-        waybar                  # Sway bar for wayland
         slurp                   # Region selector for wayland
-        swayr                   # Window switcher for sway
         swaync                  # Sway notification daemon
         libnotify               # Desktop notification library
         rofi                    # Launcher
     )
 
-    install -Dm 0644 desktop/etc/sway/config \
-        "$pkgdir/etc/sway/couldinho-desktop-config"
+    install -Dm 0644 desktop/etc/hypr/hyprland.conf \
+        "$pkgdir/etc/hypr/hyprland.conf"
     install -Dm 0644 desktop/usr/share/fonts/taskbar.ttf \
         "$pkgdir/usr/share/fonts/taskbar.ttf"
-    install -Dm 0644 desktop/etc/swaylock/config \
-        "$pkgdir/etc/swaylock/config"
     install -Dm 0644 desktop/etc/X11/xorg.conf.d/00-keyboard.conf \
         "$pkgdir/etc/X11/xorg.conf.d/00-keyboard.conf"
     install -Dm 0644 desktop/etc/xdg/waybar/config \
@@ -303,9 +301,8 @@ package_couldinho-desktop() {
     install -Dm 0644 desktop/usr/local/share/applications/visidata.desktop \
         "$pkgdir/usr/local/share/applications/visidata.desktop"
 
-    # Further sway packages
+    # Further desktop packages
     depends+=(
-        flashfocus-git              # Focus animations
         qalculate-gtk               # Calculator
         ttf-inconsolata             # Font for terminal and status etc.
         otf-font-awesome            # Font with icons
@@ -323,24 +320,12 @@ package_couldinho-desktop() {
 
     install -Dm 0644 desktop/etc/gtk-3.0/settings.ini \
         "$pkgdir/etc/gtk-3.0/settings.ini"
-    install -Dm 0644 desktop/etc/xdg/flashfocus/flashfocus.yml \
-        "$pkgdir/etc/xdg/flashfocus/couldinho-desktop-flashfocus.yml"
-    install -Dm 0644 desktop/etc/systemd/user/sway-autoname-workspaces.service \
-        "$pkgdir/etc/systemd/user/sway-autoname-workspaces.service"
-    install -Dm 0644 desktop/etc/systemd/user/sway-inactive-window-transparency.service \
-        "$pkgdir/etc/systemd/user/sway-inactive-window-transparency.service"
-    install -Dm 0644 desktop/etc/systemd/user/sway-session.target \
-        "$pkgdir/etc/systemd/user/sway-session.target"
-    install -Dm 0644 desktop/etc/systemd/user/swayr.service \
-        "$pkgdir/etc/systemd/user/swayr.service"
     install -Dm 0644 desktop/etc/systemd/user/systembus-notify.service \
         "$pkgdir/etc/systemd/user/systembus-notify.service"
     install -Dm 0644 desktop/etc/systemd/user/waybar-updates.service \
         "$pkgdir/etc/systemd/user/waybar-updates.service"
     install -Dm 0644 desktop/etc/systemd/user/waybar-updates.timer \
         "$pkgdir/etc/systemd/user/waybar-updates.timer"
-    install -Dm 0644 desktop/etc/systemd/user/waybar.service \
-        "$pkgdir/etc/systemd/user/waybar.service"
     install -Dm 0644 desktop/etc/rofi-pass.conf \
         "$pkgdir/etc/couldinho-desktop-rofi-pass.conf"
 
@@ -411,6 +396,7 @@ package_couldinho-desktop() {
     # General scripts
     install -Dm 0755 desktop/usr/local/bin/browser "$pkgdir/usr/local/bin/browser"
     install -Dm 0755 desktop/usr/local/bin/cglaunch "$pkgdir/usr/local/bin/cglaunch"
+    install -Dm 0755 desktop/usr/local/bin/cgtoggle "$pkgdir/usr/local/bin/cgtoggle"
     install -Dm 0755 desktop/usr/local/bin/checkofficial "$pkgdir/usr/local/bin/checkofficial"
     install -Dm 0755 desktop/usr/local/bin/dmenu "$pkgdir/usr/local/bin/dmenu"
     install -Dm 0755 desktop/usr/local/bin/dmenu-wl "$pkgdir/usr/local/bin/dmenu-wl"
@@ -429,13 +415,10 @@ package_couldinho-desktop() {
     install -Dm 0755 desktop/usr/local/bin/waybar-usbguard "$pkgdir/usr/local/bin/waybar-usbguard"
     install -Dm 0755 desktop/usr/local/bin/waybar-vpn "$pkgdir/usr/local/bin/waybar-vpn"
     install -Dm 0755 desktop/usr/local/bin/waybar-yubikey "$pkgdir/usr/local/bin/waybar-yubikey"
-    install -Dm 0755 desktop/usr/local/bin/sway-audio "$pkgdir/usr/local/bin/sway-audio"
-    install -Dm 0755 desktop/usr/local/bin/sway-autoname-workspaces "$pkgdir/usr/local/bin/sway-autoname-workspaces"
-    install -Dm 0755 desktop/usr/local/bin/sway-exit "$pkgdir/usr/local/bin/sway-exit"
-    install -Dm 0755 desktop/usr/local/bin/sway-gif-area "$pkgdir/usr/local/bin/sway-gif-area"
-    install -Dm 0755 desktop/usr/local/bin/sway-inactive-window-transparency "$pkgdir/usr/local/bin/sway-inactive-window-transparency"
-    install -Dm 0755 desktop/usr/local/bin/sway-screenshare "$pkgdir/usr/local/bin/sway-screenshare"
-    install -Dm 0755 desktop/usr/local/bin/sway-screenshot-area "$pkgdir/usr/local/bin/sway-screenshot-area"
+    install -Dm 0755 desktop/usr/local/bin/audio "$pkgdir/usr/local/bin/audio"
+    install -Dm 0755 desktop/usr/local/bin/exit-wm "$pkgdir/usr/local/bin/exit-wm"
+    install -Dm 0755 desktop/usr/local/bin/record-area "$pkgdir/usr/local/bin/record-area"
+    install -Dm 0755 desktop/usr/local/bin/screenshot-area "$pkgdir/usr/local/bin/screenshot-area"
     install -Dm 0755 desktop/usr/local/bin/wl-clipboard-manager "$pkgdir/usr/local/bin/wl-clipboard-manager"
 
     # Environment
