Update some hyprland window functions

--- a/conf/desktop/etc/hypr/hyprland.conf
+++ b/conf/desktop/etc/hypr/hyprland.conf
@@ -63,7 +63,7 @@ master {
 }
 
 # Window configuration
-windowrulev2 = workspace 2, class:^org.qutebrowser.qutebrowser$
+windowrulev2 = workspace 2, class:^Vivaldi-stable$
 windowrulev2 = workspace 3, class:^scli$
 windowrulev2 = workspace 4, class:^neomutt$
 
@@ -77,6 +77,7 @@ windowrulev2 = size 40% 60%, class:^qalculate-gtk$
 windowrulev2 = center, class:^qalculate-gtk$
 
 windowrulev2 = float, class:^udiskie$
+windowrulev2 = float, class:^feh$
 
 windowrulev2 = float, class:^mpv$
 windowrulev2 = size 40% 30%, class:^mpv$
@@ -95,7 +96,7 @@ bind = $win$shift, Return,                exec, alacritty -e /bin/bash
 
 # Launcher
 bind = $hyper, equal,               exec, cgtoggle qalculate-gtk
-bind = $hyper, d,                   exec, cglaunch rofi -modi drun -show drun
+bind = $hyper, d,                   exec, cgtoggle rofi -modi drun -show drun
 bind = $hyper, p,                   exec, wl-clipboard-manager lock; cglaunch passmenu -p pass; wl-clipboard-manager unlock
 bind = $win,   p,                   exec, cgtoggle pass-gen
 bind = $hyper, m,                   exec, cgtoggle udiskie-dmenu
