Use kitty as terminal launcher

--- a/conf/desktop/etc/hypr/hyprland.conf
+++ b/conf/desktop/etc/hypr/hyprland.conf
@@ -91,8 +91,8 @@ $shift = SHIFT
 # Terminal
 bind = $hyper,     Return,                exec, cglaunch --term
 bind = $hyper,     XF86MonBrightnessDown, exec, cglaunch --term
-bind = $win,       Return,                exec, alacritty
-bind = $win$shift, Return,                exec, alacritty -e /bin/bash
+bind = $win,       Return,                exec, kitty --config NONE
+bind = $win$shift, Return,                exec, kitty --config NONE -e /bin/bash
 
 # Launcher
 bind = $hyper, equal,               exec, cgtoggle qalculate-gtk
